--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "~38.0.8",
+    "expo-permissions": "7.0.0",
     "expo-secure-store": "7.0.0",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
